practice_6/practice/right_answers/homework/site-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: site-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: site.sXXXXXX.edu.slurm.io
    http:
      paths:
      - backend:
          serviceName: my-service
          servicePort: 80
  tls:
  - hosts:
    - site.sXXXXXX.edu.slurm.io
    secretName: site-tls
